<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GameFramework</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_game_main">Shall We Play A Game?</string>
    <string name="save_config">Save As Default Configuration</string>
    <string name="begin_game">Begin Game</string>
    <string name="name_label">Name:</string>
    <string name="server_ip_address">Server\'s IP Address:</string>
    <string name="remove_player">Remove Player</string>
    <string name="add_player">Add Player</string>
    <string name="player_name">Player Name</string>
    <string name="player_type">Player Type</string>
    <string name="loopback_ip_address">127.0.0.1</string>
    <string name="guest">Guest</string>
    <string name="local_game">Local Game</string>
    <string name="remote_game">Remote Game</string>
    <string name="save_config_as_default">Save this Configuration as the Default</string>
    <string name="start_the_game">Start Game!</string>
    <string name="pauseString">Pause</string>
    <string name="pegString">Place Peg</string>
    <string name="bridgeText">Place Bridge</string>
    <string name="endTurnString">End Turn</string>
    <string name="curPlayerString"></string>
    <string name="currentPlayerString">Current Player</string>
    <string name="twixtString">Twixt</string>
    <string name="title_activity_view_rules">ViewRules</string>
    <string name="twixtName">TwixT</string>

</resources>